# Termectron

./: .gitignore  Cargo.toml  README.md  alacritty.toml  justfile  termectron.toml
scripts/: download-alacritty.sh  package-linux.sh  package-macos.sh  package-windows.sh
src/: main.rs
